修改为弹幕或者即时群聊
本来想实现弹幕，即时群聊功能。基本上实现了，但是SSE效果不怎么好，做不到消息立马发送到所以打算更换web socket

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>测试</title>
+    <title>即时聊天网页</title>
     <style type="text/css">
     body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}
 table{border-collapse:collapse;border-spacing:0;}
@@ -30,7 +30,7 @@ legend{color:#000;}
 </head>
 <body>
     <!--展示弹幕区域-->
-    <div class="title">实时聊天室</div>
+    <div class="title">实时聊天室/弹幕</div>
     <div id="showarea"></div>
     <input type="input" id="input"></input>
     <input type="button" value="发送" id="btn">
